# ICExtract

./: CMakeLists.txt  README.md
cmake/: SwigPython.cmake
cpp/: CMakeLists.txt  PIC.cpp  PIC.h  decdia_export.h  main.cpp
python/: CMakeLists.txt  ICExtract.i  decDIA.i  decDIA.lib
swig/: eigen.i  eigen_add.i
